gcc/testsuite/gdc.test/compilable/imports/format23327.d
module imports.format23327;

import imports.format23327.write;

immutable(string) format23327() { }

import imports.format23327.internal.write;
