gcc/testsuite/gdc.test/fail_compilation/imports/test23109b.d
module imports.test23109b;
import imports.test23109a;
import imports.test23109c;
struct Ensure
{
    Statement ensure;
    Ensures* arraySyntaxCopy()
    {
    }
}
